# NeoBirth

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-03-11-tb303-implementation-plan.md  2026-03-11-tb303-synth-design.md
src/: colors.rs  main.rs
src/audio/: dac.rs  engine.rs  envelope.rs  filter.rs  mod.rs  oscillator.rs
src/sequencer/: mod.rs  pattern.rs
src/ui/: controls.rs  leds.rs  mod.rs
